--- a/styling.css
+++ b/styling.css
@@ -1,9 +1,12 @@
 body {
   background-color: grey;
   text-align: center;
+  margin: 50px;
+  box-sizing: border-box;
 }
 #logo {
   height: 120px;
+  padding: 20px;
 }
 #logo:hover {
   transform: rotate(90deg);
@@ -17,7 +20,7 @@ body {
 .navbar-brand {
   color: black;
   display: block;
-  padding: 4px;
+  padding: 6px;
 }
 .navbar-brand:hover {
   color: white;
@@ -42,16 +45,29 @@ body {
   clear: both;
 }
 #todoname {
+  font-size: 20px;
   padding-right: 400px;
+  text-decoration: underline;
 }
 #todocontrol {
+  font-size: 20px;
   padding-left: 400px;
+  text-decoration: underline;
 }
+
 .td1 {
   float: left;
   margin: 10px;
 }
 .td2 {
+  float: right;
+  margin: 15px;
+}
+.tdx {
+  float: left;
+  margin: 10px;
+}
+.tdy {
   float: right;
   margin: 15px;
 }
@@ -62,4 +78,9 @@ body {
 footer {
   text-align: center;
   margin-top: 10%;
+}
+#formarea {
+  text-align: center;
+  clear: both;
+  display: block;
 }
